--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
@@ -22,7 +22,6 @@
     {{ add_js(
         [
             '//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/jstree.min.js',
-            '//cdnjs.cloudflare.com/ajax/libs/jquery-hashchange/1.3/jquery.ba-hashchange.min.js',
             '//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.15.5/js/jquery.tablesorter.min.js',
             '//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js',
         ]
@@ -74,7 +73,7 @@
                                                     researcher_color: "#00A",
                                                     researcher_action: "location.href='#';showProjects('peopleId',\{\{person.id\}\});",
 
-                                                    afteropen: "$(window).hashchange();"
+                                                    afteropen: "$(window).trigger('hashchange');"
                                                    }
 
                                         insertTree(tree);
