Added original filename field to template and js.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/distribution-info.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/distribution-info.html.twig
@@ -71,6 +71,11 @@
                 {{ form_row(form.datasetFileColdStorageArchiveSha256Hash) }}
             </td>
         </tr>
+        <tr class="row-coldstorage-original-filename">
+            <td>
+                {{ form_row(form.datasetFileColdStorageOriginalFilename) }}
+            </td>
+        </tr>
     </table>
 </fieldset>
 
