Working, now for the cookie!

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Api/Tree/projects.json.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Api/Tree/projects.json.twig
@@ -1,6 +1,7 @@
 [
 {% for project in projects %}
     {
+        "id": "datasets_projectId_{{project.ID}}",
         "text": "{{project.getName | raw}}",
         "li_attr": {
             "style": "color:{{tree.project_color}}"
