--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
@@ -1,15 +1,7 @@
 {% extends "PelagosAppBundle:template:UI.html.twig" %}
-{% block title %}Dataset Monitoring{% endblock %}
+
 {% block head %}
     {{ parent() }}
-    
-    {{
-        add_css (
-            [
-                '//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/themes/default/style.min.css',
-            ]
-        )
-    }}
 
     {% stylesheets
         '@PelagosAppBundle/Resources/public/css/dataset-monitoring.css'
@@ -21,7 +13,7 @@
 
     {{ add_js(
         [
-            '//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/jstree.min.js',
+            '//cdnjs.cloudflare.com/ajax/libs/jquery-hashchange/1.3/jquery.ba-hashchange.min.js',
             '//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.15.5/js/jquery.tablesorter.min.js',
             '//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js',
         ]
@@ -73,7 +65,7 @@
                                                     researcher_color: "#00A",
                                                     researcher_action: "location.href='#';showProjects('peopleId',\{\{person.id\}\});",
 
-                                                    afteropen: "$(window).trigger('hashchange');"
+                                                    afteropen: "$(window).hashchange();"
                                                    }
 
                                         insertTree(tree);
