Fixed title block

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
@@ -1,4 +1,5 @@
 {% extends "PelagosAppBundle:template:UI.html.twig" %}
+{% block title %}Dataset Monitoring{% endblock %}
 
 {% block head %}
     {{ parent() }}
