--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Search/default.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Search/default.html.twig
@@ -1,30 +1,21 @@
 {% extends "PelagosAppBundle:template:UI.html.twig" %}
 
 {% block head %}
-    {{
-    add_css (
+    {{ add_css (
         [
             '//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'
         ]
-    )
-    }}
+    ) }}
     {% stylesheets
-        '@PelagosAppBundle/Resources/public/css/search.css'
-    %}
+        '@PelagosAppBundle/Resources/public/css/search.css' %}
         {{ add_css(asset_url) }}
-    {% endstylesheets  %}
+    {% endstylesheets %}
 {% endblock %}
 
 {% block body %}
-    <div class="header">
-        <h1 >Datasets Search</h1>
-        <form>
-            <div class="box">
-                <div class="container-4" align="center">
-                    <input type="search" id="search" placeholder="Search..." />
-                    <button class="icon"><i class="fa fa-search"></i></button>
-                </div>
-            </div>
-        </form>
-    </div>
+    {% if query is null %}
+        {% include 'PelagosAppBundle:Search:form.html.twig' %}
+    {% else %}
+        {% include 'PelagosAppBundle:Search:results.html.twig' %}
+    {% endif %}
 {% endblock %}
