Made Research link available. Also made links dynamic (routes).

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Menus/admin.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Menus/admin.html.twig
@@ -1,4 +1,4 @@
-<li class="last odd menuparent"><span class="menuparent nolink sf-with-ul">ADMIN<span class="sf-sub-indicator"> »</span><span class="sf-sub-indicator"> »</span></span>
+<li class="odd menuparent"><span class="menuparent nolink sf-with-ul">ADMIN<span class="sf-sub-indicator"> »</span><span class="sf-sub-indicator"> »</span></span>
     <ul class="sf-hidden" style="float: none; width: 12em;">
         <li class="first odd"><a href="{{ path('pelagos_app_ui_account_default') }}">Request Account</a></li>
         <li class="middle even"><a href="{{ path('pelagos_app_ui_datarepository_default', {id:1}) }}">Data Repository</a></li>
