--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Menus/main.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Menus/main.html.twig
@@ -3,10 +3,10 @@
         <div id="block-pelagos-menu-1" class="block block-superfish">
             <div class="content">
                 <ul id="pelagos-menu-1" class="menu sf-menu sf-main-menu sf-horizontal sf-style-none sf-js-enabled sf-shadow">
-                    <li class="first odd"><a href="https://data.gulfresearchinitiative.org/" >Home</a></li>
+                    <li class="first odd"><a href="{{ path('pelagos_homepage') }}" >Home</a></li>
                     <li class="middle even menuparent"><span class="nav-chart menuparent nolink sf-with-ul">Search Data<span class="sf-sub-indicator"> »</span>
                                             <span class="sf-sub-indicator"> »</span></span><ul class="sf-hidden" style="float: none; width: 13.1111em;">
-                            <li class="first odd "><a href="https://data.gulfresearchinitiative.org/data-discovery">Search GRIIDC Data</a></li>
+                            <li class="first odd "><a href="{{ path('pelagos_app_ui_datadiscovery_default') }}">Search GRIIDC Data</a></li>
                             <li class="middle even "><a href="https://data.gulfresearchinitiative.org/additional-gulf-mexico-data-resources">Gulf of Mexico Data Sources</a></li>
                             <li class="last odd "><a href="https://erddap.griidc.org/erddap" target="_top">GRIIDC ERDDAP</a></li>
                         </ul></li>
@@ -14,12 +14,12 @@
                                         <span class="sf-sub-indicator"> »</span></span>
                         <ul class="sf-hidden" style="float: none; width: 12.2222em;">
                             <li class="first odd "><a href="https://data.gulfresearchinitiative.org/how-submit-data-griidc">How to Submit Data</a></li>
-                            <li class="middle even "><a href="https://data.gulfresearchinitiative.org/dif">Dataset Information Form</a></li>
-                            <li class="last odd "><a href="https://data.gulfresearchinitiative.org/dataset-submission">Dataset Submission</a></li></ul></li>
+                            <li class="middle even "><a href="{{ path('pelagos_app_ui_dif_default') }}">Dataset Information Form</a></li>
+                            <li class="last odd "><a href="{{ path('pelagos_app_ui_datasetsubmission_default') }}">Dataset Submission</a></li></ul></li>
                     <li class="middle even menuparent"><span class="nav-chart menuparent nolink sf-with-ul">Tracking &amp; Stats<span class="sf-sub-indicator"> »</span><span class="sf-sub-indicator"> »</span></span>
                         <ul class="sf-hidden" style="float: none; width: 12em;">
-                            <li class="first odd "><a href="https://data.gulfresearchinitiative.org/dataset-monitoring">Dataset monitoring</a></li>
-                            <li class="last even "><a href="https://data.gulfresearchinitiative.org/stats">GRIIDC system statistics</a></li>
+                            <li class="first odd "><a href="{{ path('pelagos_app_ui_datasetmonitoring_default') }}">Dataset monitoring</a></li>
+                            <li class="last even "><a href="{{ path('pelagos_app_ui_stats_default') }}">GRIIDC system statistics</a></li>
                         </ul>
                     </li>
                     <li class="middle odd menuparent"><span class="menuparent nolink sf-with-ul">About Us<span class="sf-sub-indicator"> »</span><span class="sf-sub-indicator"> »</span></span>
@@ -33,21 +33,22 @@
                     <li class="middle even"><span class="menuparent nolink sf-with-ul">Help<span class="sf-sub-indicator"> »</span>
                                             <span class="sf-sub-indicator"> »</span></span>
                         <ul class="sf-hidden" style="float: none; width: 13.5em;">
-                            <li class="first odd "><a href="https://data.gulfresearchinitiative.org/account/new">Account Request</a></li>
-                            <li class="middle even "><a href="https://data.gulfresearchinitiative.org/account/password">Password Reset</a></li>
-                            <li class="middle odd "><a href="https://data.gulfresearchinitiative.org/account/forgot-username">Forgot Username</a></li>
+                            <li class="first odd "><a href="{{ path('pelagos_app_ui_account_create') }}">Account Request</a></li>
+                            <li class="middle even "><a href="{{ path('pelagos_app_ui_account_passwordreset') }}">Password Reset</a></li>
+                            <li class="middle odd "><a href="{{ path('pelagos_app_ui_account_forgotusername') }}">Forgot Username</a></li>
                             <li class="middle even "><a href="https://data.gulfresearchinitiative.org/frequently-asked-questions">FAQs</a></li>
                             <li class="middle odd "><a href="https://data.gulfresearchinitiative.org/data-management-planning">Data Management Planning</a></li>
                             <li class="middle even "><a href="https://data.gulfresearchinitiative.org/training-user-guides">Training &amp; User Guides</a></li>
                             <li class="middle odd "><a href="https://data.gulfresearchinitiative.org/video-tutorials">Video Tutorials</a></li>
                             <li class="middle even "><a href="https://data.gulfresearchinitiative.org/data-file-transfer-methods">Data File Transfer Methods</a></li>
                             <li class="middle odd "><a href="https://data.gulfresearchinitiative.org/metadata-editor-start">ISO 19115-2 Metadata Editor</a></li>
-                            <li class="middle even "><a href="https://triton.tamucc.edu/issues"> Issue Tracking in JIRA</a></li>
+                            <li class="middle even "><a href="https://griidc.atlassian.net"> Issue Tracking in JIRA</a></li>
                             <li class="last odd "><a href="https://data.gulfresearchinitiative.org/RB-data-compliance">Data Compliance Information</a></li>
                         </ul>
                     </li>
                     {% if is_granted('ROLE_DATA_REPOSITORY_MANAGER') %}
                         {% include "PelagosAppBundle:Menus:admin.html.twig" %}
+                        <li class="last even"><a href="http://research.gulfresearchinitiative.org/" title="GoMRI Research Information" name="GoMRI Research" target="_top" >Research</a></li>
                     {% else %}
                         <li class="last odd"><a href="http://research.gulfresearchinitiative.org/" title="GoMRI Research Information" name="GoMRI Research" target="_top" >Research</a></li>
                     {% endif %}
