Added missing qTip style sheet.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/layout.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/layout.html.twig
@@ -8,6 +8,7 @@
 
     {%block stylesheets %}
         <link href="{{ asset('/build/common.css') }}" rel="stylesheet" />
+        <link href="//cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.0/jquery.qtip.min.css" rel="stylesheet" />
     {%endblock stylesheets  %}
 
     {% block javascripts %}
