--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Search/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Search/form.html.twig
@@ -1,5 +1,10 @@
 <div class="header">
-    <h1>Datasets Search</h1>
+    <div id="logo">
+        <h2>{% image '@PelagosAppBundle/Resources/public/images/search-logo.png' %}
+                <img src="{{asset_url}}">
+            {% endimage %}
+        </h2>
+    </div>
     <form id="searchForm" name="searchForm">
         <div class="box">
             <div class="container-4" align="center">
