Repeat at <gmd:distributorTransferOptions> level.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
@@ -109,7 +109,13 @@
                                 <gco:CharacterString>https</gco:CharacterString>
                             </gmd:protocol>
                         </gmd:CI_OnlineResource>
-                        {% if dataset.datasetSubmission.erddapUrl %}
+                    </gmd:onLine>
+                </gmd:MD_DigitalTransferOptions>
+            </gmd:distributorTransferOptions>
+            {% if dataset.datasetSubmission.erddapUrl %}
+                <gmd:distributorTransferOptions>
+                    <gmd:MD_DigitalTransferOptions>
+                        <gmd:onLine>
                             <gmd:CI_OnlineResource>
                                 <gmd:linkage>
                                     <gmd:URL>{{ dataset.datasetSubmission.erddapUrl }}</gmd:URL>
@@ -121,22 +127,22 @@
                                     ERDDAP Data Subset Form
                                 </gmd:name>
                                 <gmd:description>
-                                    ERDDAP\'s version of the OPeNDAP .html web page for this dataset.
+                                    ERDDAP's version of the OPeNDAP .html web page for this dataset.
                                     Specify a subset of the dataset and download the data via OPeNDAP
                                     or in many different file types.
                                 </gmd:description>
                                 <gmd:function>
                                     <gmd:CI_OnLineFunctionCode
                                             codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#CI_OnLineFunctionCode"
-                                            codeListValue="001">
+                                            codeListValue="download">
                                         download
                                     </gmd:CI_OnLineFunctionCode>
                                 </gmd:function>
                             </gmd:CI_OnlineResource>
-                        {% endif %}
-                    </gmd:onLine>
-                </gmd:MD_DigitalTransferOptions>
-            </gmd:distributorTransferOptions>
+                        </gmd:onLine>
+                    </gmd:MD_DigitalTransferOptions>
+                </gmd:distributorTransferOptions>
+            {% endif %}
         </gmd:MD_Distributor>
     </gmd:distributor>
 </gmd:MD_Distribution>
