Some debug code.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Api/Tree/projects.json.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Api/Tree/projects.json.twig
@@ -4,7 +4,8 @@
         "id": "datasets_projectId_{{project.ID}}",
         "text": "{{project.getName | raw}}",
         "li_attr": {
-            "style": "color:{{tree.project_color}}"
+            "style": "color:{{tree.project_color}}",
+            "id": "datasets_projectId_{{project.ID}}"
         },
         "a_attr": {
             "id": "datasets_projectId_{{project.ID}}"
