--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Api/Tree/research_awards.json.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Api/Tree/research_awards.json.twig
@@ -18,7 +18,8 @@
                         "children": true
                         ,
                         "li_attr": {
-                            "style": "color:{{tree.rfp_color}}"
+                            "style": "color:{{tree.rfp_color}}",
+                            "id" : "projects_funding-cycle_{{fundSrc.getId}}"
                         },
                         "a_attr": {
                             "action": "{{tree.rfp_action | evaluate}}"
