--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
@@ -134,7 +134,7 @@
                                 <gmd:function>
                                     <gmd:CI_OnLineFunctionCode
                                             codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#CI_OnLineFunctionCode"
-                                            codeListValue="download">
+                                            codeListValue="download" codeSpace="001">
                                         download
                                     </gmd:CI_OnLineFunctionCode>
                                 </gmd:function>
