--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
@@ -116,7 +116,7 @@
                             </gmd:description>
                             <gmd:function>
                                 <gmd:CI_OnLineFunctionCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#CI_OnLineFunctionCode"
-                                                           codeListValue="information">
+                                                           codeListValue="information" codeSpace="002">
                                     information
                                 </gmd:CI_OnLineFunctionCode>
                             </gmd:function>
