--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Search/results.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Search/results.html.twig
@@ -1,12 +1,60 @@
-{% for result in results %}
-    <li>
-        {{ result.title }}
-        {% if result.datasetSubmission.authors | default %}
-            <div class="attr"><span class="attr">Dataset Author(s):</span> {{ result.datasetSubmission.authors }}</div>
-        {% endif %}
-        <br>
-        <b>
-            ({{ result.udi }})
-        </b>
-    </li>
-{% endfor %}
+<div class="container bootstrap snippet">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="ibox float-e-margins">
+                <div class="ibox-content">
+                    <h2>
+                        {{ count }} results found for: <span class="text-navy">"{{ query }}"</span>
+                    </h2>
+
+                    <div class="search-form">
+                        <form id="searchForm" name="searchForm">
+                            <div class="box">
+                                <div class="container-4" align="center">
+                                    <input type="search" id="search" name="query" placeholder="Search..."/>
+                                    <button class="icon"
+                                            type="button"
+                                            onclick="window.location.href='{{ path('pelagos_app_ui_searchpage_default') }}?query=' +
+                                                    document.getElementById('search').value.trim()">
+                                        <i class="fa fa-search"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    {% for result in results %}
+                        <div class="hr-line-dashed"></div>
+                        <div class="search-result">
+                            <h3><a class="search-results"
+                                   href="{{ path('pelagos_app_ui_dataland_default', {'udi' : result.udi } ) }}">
+                                    {{ result.datasetSubmission.authors | default }}
+                                    {{ result.year |default }}
+                                    {{ result.title }}
+                                    {{ result.researchGroup.name }}.
+                                    DOI: {{ result.doi.doi }}
+                                    UDI: {{ result.udi }}
+                                </a></h3>
+                        </div>
+                    {% endfor %}
+
+                    <div class="text-center">
+                        <div class="btn-group">
+                            <button class="btn btn-white" type="button"><i class="glyphicon glyphicon-chevron-left"></i>
+                            </button>
+                            <button class="btn btn-white">1</button>
+                            <button class="btn btn-white  active">2</button>
+                            <button class="btn btn-white">3</button>
+                            <button class="btn btn-white">4</button>
+                            <button class="btn btn-white">5</button>
+                            <button class="btn btn-white">6</button>
+                            <button class="btn btn-white">7</button>
+                            <button class="btn btn-white" type="button">
+                                <i class="glyphicon glyphicon-chevron-right"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
