Parse distributionUrl protocol instead of hardcode.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
@@ -106,7 +106,7 @@
                                 <gmd:URL>{{ distPoint.distributionUrl }}</gmd:URL>
                             </gmd:linkage>
                             <gmd:protocol>
-                                <gco:CharacterString>https</gco:CharacterString>
+                                <gco:CharacterString>{{ distPoint.distributionUrlProtocol }}</gco:CharacterString>
                             </gmd:protocol>
                             <gmd:name>
                                 <gco:CharacterString>Data Landing Page</gco:CharacterString>
