Added default to doi

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Search/results.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Search/results.html.twig
@@ -31,7 +31,7 @@
                                     {{ result.year |default }}
                                     {{ result.title }}
                                     {{ result.researchGroup.name }}.
-                                    DOI: {{ result.doi.doi }}
+                                    DOI: {{ result.doi.doi |default }}
                                     UDI: {{ result.udi }}
                                 </a></h3>
                         </div>
