--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Search/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Search/form.html.twig
@@ -1,21 +1,23 @@
-<div class="header">
-    <div id="logo">
+<div class="container header">
+    <div class="row">
         <h2>{% image '@PelagosAppBundle/Resources/public/images/search-logo.png' %}
-                <img src="{{asset_url}}">
+                <img src="{{ asset_url }}">
             {% endimage %}
         </h2>
-    </div>
-    <form id="searchForm" name="searchForm">
-        <div class="box">
-            <div class="container-4" align="center">
-                <input type="search" id="search" name="query" placeholder="Search..."/>
-                <button class="icon"
-                        type="button"
-                        onclick="window.location.href='{{ path('pelagos_app_ui_searchpage_default') }}?query=' +
+        <form id="searchForm" name="searchForm">
+            <div id="custom-search-input" align="center">
+                <div class="input-group col-md-12">
+                    <input type="search" id="search" name="query" class="search-query form-control" placeholder="Search..."/>
+                    <span class="input-group-btn">
+                        <button class="btn btn-danger"
+                                type="button"
+                                onclick="window.location.href='{{ path('pelagos_app_ui_searchpage_default') }}?query=' +
                                 document.getElementById('search').value.trim()">
-                    <i class="fa fa-search"></i>
-                </button>
+                            <span class=" glyphicon glyphicon-search"></span>
+                        </button>
+                    </span>
+                </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
 </div>
