--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/search.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/search.css
@@ -1,71 +1,3 @@
-container-4{
-    overflow: hidden;
-    width: 300px;
-    vertical-align: middle;
-    white-space: nowrap;
-}
-
-.container-4 input#search{
-    width: 300px;
-    height: 50px;
-    background: #2b303b;
-    border: none;
-    font-size: 10pt;
-    color: #fff;
-    padding-left: 15px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-}
-
-.container-4 input#search::-webkit-input-placeholder {
-    color: #65737e;
-}
-
-.container-4 input#search:-moz-placeholder { /* Firefox 18- */
-    color: #65737e;
-}
-
-.container-4 input#search::-moz-placeholder {  /* Firefox 19+ */
-    color: #65737e;
-}
-
-.container-4 input#search:-ms-input-placeholder {
-    color: #65737e;
-}
-
-.container-4 button.icon{
-    -webkit-border-top-right-radius: 5px;
-    -webkit-border-bottom-right-radius: 5px;
-    -moz-border-radius-topright: 5px;
-    -moz-border-radius-bottomright: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-
-    border: none;
-    background: #232833;
-    height: 50px;
-    width: 50px;
-    color: #4f5b66;
-    opacity: 0;
-    font-size: 10pt;
-
-    -webkit-transition: all .55s ease;
-    -moz-transition: all .55s ease;
-    -ms-transition: all .55s ease;
-    -o-transition: all .55s ease;
-    transition: all .55s ease;
-}
-
-.container-4:hover button.icon, .container-4:active button.icon, .container-4:focus button.icon{
-    outline: none;
-    opacity: 1;
-    margin-left: -50px;
-}
-
-.container-4:hover button.icon:hover{
-    background: ghostwhite;
-}
 .header {
     padding: 60px;
     text-align: center;
@@ -107,9 +39,10 @@ a:visited {
     margin-top: 10px;
 }
 
-.search-result h3 {
+.search-result h4 {
     margin-bottom: 0;
     color: #1E0FBE;
+    font-weight: bold;
 }
 
 .search-result .search-link {
@@ -132,4 +65,42 @@ a:visited {
 h2 {
     font-size: 24px;
     font-weight: 100;
+}
+#custom-search-input {
+    margin:0;
+    margin-top: 10px;
+    padding: 0;
+}
+
+#custom-search-input .search-query {
+    padding-right: 3px;
+    padding-right: 4px \9;
+    padding-left: 3px;
+    padding-left: 4px \9;
+    /* IE7-8 doesn't have border-radius, so don't indent the padding */
+
+    margin-bottom: 0;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 10px;
+}
+
+#custom-search-input button {
+    border: #1E0FBE;
+    background: none;
+    /** belows styles are working good */
+    padding: 2px 5px;
+    margin-top: 2px;
+    position: relative;
+    left: -28px;
+    /* IE7-8 doesn't have border-radius, so don't indent the padding */
+    margin-bottom: 0;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 10px;
+    color: #004250;
+}
+
+.search-query:focus + button {
+    z-index: 3;
 }
