--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Search/results.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Search/results.html.twig
@@ -9,15 +9,17 @@
 
                     <div class="search-form">
                         <form id="searchForm" name="searchForm">
-                            <div class="box">
-                                <div class="container-4" align="center">
-                                    <input type="search" id="search" name="query" placeholder="Search..."/>
-                                    <button class="icon"
-                                            type="button"
-                                            onclick="window.location.href='{{ path('pelagos_app_ui_searchpage_default') }}?query=' +
-                                                    document.getElementById('search').value.trim()">
-                                        <i class="fa fa-search"></i>
-                                    </button>
+                            <div id="custom-search-input" align="center">
+                                <div class="input-group col-md-12">
+                                    <input type="text" class="search-query form-control" placeholder="Search..."/>
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-danger"
+                                                type="button"
+                                                onclick="window.location.href='{{ path('pelagos_app_ui_searchpage_default') }}?query=' +
+                                                        document.getElementById('search').value.trim()">
+                                            <span class=" glyphicon glyphicon-search"></span>
+                                        </button>
+                                    </span>
                                 </div>
                             </div>
                         </form>
