--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Search/results.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Search/results.html.twig
@@ -3,7 +3,7 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-content">
-                    <h2>
+                    <h2 data-content="{{ count }}" id="count">
                         {{ count }} results found for: <span class="text-navy">"{{ query }}"</span>
                     </h2>
 
@@ -30,18 +30,10 @@
 
                     <div class="text-center">
                         <div class="btn-group">
-                            <button class="btn btn-white" type="button"><i class="glyphicon glyphicon-chevron-left"></i>
-                            </button>
-                            <button class="btn btn-white">1</button>
-                            <button class="btn btn-white  active">2</button>
-                            <button class="btn btn-white">3</button>
-                            <button class="btn btn-white">4</button>
-                            <button class="btn btn-white">5</button>
-                            <button class="btn btn-white">6</button>
-                            <button class="btn btn-white">7</button>
-                            <button class="btn btn-white" type="button">
-                                <i class="glyphicon glyphicon-chevron-right"></i>
-                            </button>
+                            <nav aria-label="Search results pages">
+                                <ul class="pagination" id="paginate">
+                                </ul>
+                            </nav>
                         </div>
                     </div>
                 </div>
