Changed jquery pagination plugin

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Search/default.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Search/default.html.twig
@@ -3,7 +3,7 @@
 {% block head %}
     {{ add_css (
         [
-            '//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css'
+            '//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'
         ]
     ) }}
     {% stylesheets
@@ -13,9 +13,9 @@
 
     {{ add_js (
         [
-            '///code.jquery.com/jquery-1.11.1.min.js',
-            '//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js',
-            '//cdnjs.cloudflare.com/ajax/libs/twbs-pagination/1.4.2/jquery.twbsPagination.min.js'
+            '//code.jquery.com/jquery-2.1.3.min.js',
+            '//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js',
+            '//cdnjs.cloudflare.com/ajax/libs/bootpag/1.0.7/jquery.bootpag.min.js'
         ]
     ) }}
     {% javascripts
