--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Search/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Search/form.html.twig
@@ -2,7 +2,7 @@
     <div id="custom-search-input" align="center">
         <div class="input-group col-md-12">
             <input type="search" id="search" name="query" class="search-query form-control" placeholder="Search..."
-                   value = {{ query|default }}>
+                   value = "{{ query|default }}">
             <input type="hidden" id="pageNo" name="page" value="{{ page | default }}">
             <span class="input-group-btn">
                 <button class="btn btn-danger" type="submit">
