--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/search.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/search.css
@@ -119,3 +119,9 @@ h1{
 #search-pagination li{
     display: inline-block;
 }
+
+div.b {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
