--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
@@ -4,6 +4,14 @@
 {% block head %}
     {{ parent() }}
 
+    {{
+        add_css (
+            [
+                '//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/themes/default/style.min.css',
+            ]
+        )
+    }}
+
     {% stylesheets
         '@PelagosAppBundle/Resources/public/css/dataset-monitoring.css'
         '@PelagosAppBundle/Resources/public/css/scrollbars.css'
@@ -14,7 +22,7 @@
 
     {{ add_js(
         [
-            '//cdnjs.cloudflare.com/ajax/libs/jquery-hashchange/1.3/jquery.ba-hashchange.min.js',
+            '//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/jstree.min.js',
             '//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.15.5/js/jquery.tablesorter.min.js',
             '//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js',
         ]
@@ -66,7 +74,7 @@
                                                     researcher_color: "#00A",
                                                     researcher_action: "location.href='#';showProjects('peopleId',\{\{person.id\}\});",
 
-                                                    afteropen: "$(window).hashchange();"
+                                                    afteropen: "$(window).trigger('hashchange');"
                                                    }
 
                                         insertTree(tree);
