--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/EmailNotFound.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/EmailNotFound.html.twig
@@ -1,13 +1,14 @@
 {% extends "PelagosAppBundle:template:UI.html.twig" %}
 
-{% block head %}
+{%block stylesheets %}
     {{ parent() }}
-{% endblock %}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+{%endblock stylesheets  %}
 
 {% block body %}
-    <div class="messages error">
+    <div class="messages error alert alert-warning">
         <h2 class="element-invisible">Error message</h2>
         The email address you have entered could not be found in the GRIIDC system. Please contact <a href=
-        "griidc@gomri.org">griidc@gomri.org</a> for additional help.
+        "griidc@gomri.org" class="alert-link">griidc@gomri.org</a> for additional help.
     </div>
 {% endblock %}
