--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/NoAccount.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/NoAccount.html.twig
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block body %}
-    <div class="messages error">
+    <div class="messages error alert alert-danger">
         <h2 class="element-invisible">Error message</h2>
-        The email address you have entered is not associated with a GRIIDC account. If you would like to request an account, please visit <a href="{{ path('pelagos_app_ui_account_default') }}">Account Request</a>. For any additional questions please contact <a href=
-            "griidc@gomri.org">griidc@gomri.org</a>.
+        The email address you have entered is not associated with a GRIIDC account. If you would like to request an account, please visit <a href="{{ path('pelagos_app_ui_account_default') }}" class="alert-link">Account Request</a>. For any additional questions please contact <a href=
+            "griidc@gomri.org" class="alert-link">griidc@gomri.org</a>.
     </div>
 {% endblock %}
