--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/AdminOnly.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/AdminOnly.html.twig
@@ -1,4 +1,4 @@
-<div class="messages error">
+<div class="messages error alert alert-danger">
     <h2 class="element-invisible">Error message</h2>
     This page is only accessible by Data Repository Managers.
 </div>
