--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/NotLoggedIn.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/NotLoggedIn.html.twig
@@ -1,13 +1,18 @@
 {% extends "PelagosAppBundle:template:UI.html.twig" %}
 
+{%block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+{%endblock stylesheets  %}
+
 {% block head %}
     {{ parent() }}
 {% endblock %}
 
 {% block body %}
-    <div class="messages error">
+    <div class="messages error alert alert-warning">
         <h2 class="element-invisible">Error message</h2>
-        You have to be logged in to perform this action. If you have forgotten your password please visit <a href="{{ path('pelagos_app_ui_account_passwordreset') }}">password reset</a>. For any additional help please contact <a href=
-        "griidc@gomri.org">griidc@gomri.org</a>.
+        You have to be logged in to perform this action. If you have forgotten your password please visit <a href="{{ path('pelagos_app_ui_account_passwordreset') }}" class="alert-link">password reset</a>. For any additional help please contact <a href=
+        "griidc@gomri.org" class="alert-link">griidc@gomri.org</a>.
     </div>
 {% endblock %}
